# Agent-Harness

./: .dockerignore  .gitignore  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  Dockerfile  LICENSE  README.md  agent-harness.yaml  pyproject.toml
.github/workflows/: ci.yml
docs/: architecture.md  compliance-evidence-pack.md  conception-alignment.md  context-packs.md  evaluations.md  mcp-boundary.md  migration.md  operator-ui.md  prd-agent-harness-v0.1.0-initial-cli.md  prd-agent-harness-v0.2.0-provider-retrieval-foundation.md  prd-agent-harness-v0.3.0-schema-and-policy-completion.md  prd-agent-harness-v0.md  prd-agent-harness-v1.0.0-mature-cli-runtime.md  prd-agent-harness-v1.1.0-provider-core.md  prd-agent-harness-v1.2.0-local-first-retrieval.md  prd-agent-harness-v1.3.0-local-operator-surface.md  prd-agent-harness-v1.4.0-template-pack-system.md  prd-agent-harness-v1.5.0-skill-pack-system.md  prd-agent-harness-v1.6.0-mcp-boundary.md  prd-agent-harness-v1.6.1-schema-internals-refactor.md  prd-agent-harness-v1.7.0-policy-mediated-multi-agent-orchestration.md  prd-agent-harness-v1.7.1-multi-agent-complexity-benchmark.md  prd-agent-harness-v1.8.0-local-governance-console.md  prd-agent-harness-v1.9-compliance-evidence-pack.md  prd-agent-harness-v1.9.0-compliance-evidence-pack.md  prd-agent-harness-v1.md  prd-agent-harness-v10.md  prd-agent-harness-v11-multi-agent-complexity-benchmark.md  prd-agent-harness-v11.md  prd-agent-harness-v12-local-governance-console.md  prd-agent-harness-v2.0.0-reviewer-ergonomics.md  prd-agent-harness-v2.md  prd-agent-harness-v3.md  prd-agent-harness-v4.md  prd-agent-harness-v5.md  prd-agent-harness-v6.md  prd-agent-harness-v7.md  prd-agent-harness-v8.md  prd-agent-harness-v9.md  provider-core.md  (+9 more)
examples/docs/: python-refactor-context.md
examples/mcp_boundary/: README.md
examples/orchestration_workflow/: README.md  agent-harness.yaml  orchestration.json
examples/provider_audit/: README.md  agent-harness.yaml  task.json
examples/retrieval_quality/: README.md  config.v2.yaml  policy.v2.yaml  scorecard.yaml  task.json
examples/skills_workflow/: README.md  feature_brief.md  task.yaml
examples/tasks/: policy_bypass_denied_context.json  python_refactor.json
examples/template_pack_system/: README.md
fixtures/policy_eval/: blocked_secret.py
plans/: agent-harness-v0.1.0-initial-cli.md  agent-harness-v0.2.0-provider-retrieval-foundation.md  agent-harness-v0.3.0-schema-and-policy-completion.md  agent-harness-v0.md  agent-harness-v1.0.0-mature-cli-runtime.md  agent-harness-v1.1.0-provider-core.md  agent-harness-v1.2.0-local-first-retrieval.md  agent-harness-v1.3.0-local-operator-surface.md  agent-harness-v1.4.0-template-pack-system.md  agent-harness-v1.5.0-skill-pack-system.md  agent-harness-v1.6.0-mcp-boundary.md  agent-harness-v1.6.1-schema-internals-refactor.md  agent-harness-v1.7.0-policy-mediated-multi-agent-orchestration.md  agent-harness-v1.7.1-multi-agent-complexity-benchmark.md  agent-harness-v1.8.0-local-governance-console.md  agent-harness-v1.9-compliance-evidence-pack.md  agent-harness-v1.9.0-compliance-evidence-pack.md  agent-harness-v1.md  agent-harness-v10.md  agent-harness-v11-multi-agent-complexity-benchmark.md  agent-harness-v11.md  agent-harness-v12-local-governance-console.md  agent-harness-v2.0.0-reviewer-ergonomics.md  agent-harness-v2.md  agent-harness-v3.md  agent-harness-v4.md  agent-harness-v5.md  agent-harness-v6.md  agent-harness-v7.md  agent-harness-v8.md  agent-harness-v9.md
policies/: default.json
scripts/: check_large_files.py  check_private_keys.py
src/agent_harness/bundled_templates/cli-tool/files/: README.md  pyproject.toml
src/agent_harness/bundled_templates/cli-tool/files/examples/: cli-tool.config.json  cli-tool.eval.json  cli-tool.policy.json  cli-tool.task.json
src/agent_harness/bundled_templates/cli-tool/files/src/example_cli_tool/: cli.py.template
src/agent_harness/bundled_templates/cli-tool/files/tests/: test_cli.py.template
tests/: conftest.py  test_cli.py  test_context_retrieval.py  test_e2e_cli_lifecycle.py  test_evals_exports.py  test_hybrid_retrieval.py  test_mock_model.py  test_phase0_walking_skeleton.py  test_phase3_policy_denied_data.py  test_phase4_approval_bound_tools.py  test_phase5_context_retrieval.py  test_phase6_runtime_resume.py  test_phase7_evals_exports.py  test_policy.py  test_policy_enforcement.py  test_provider_gateway.py  test_provider_input.py  test_provider_profiles.py  test_retrieval.py  test_runtime.py  test_runtime_resume.py  test_storage_audit.py  test_template_registry.py  test_tool_approval.py  test_tools.py  test_v1_phase0_provider_profiles.py  test_v1_phase1_provider_approval.py  test_v1_phase2_provider_input.py  test_v1_phase3_provider_gateway.py  test_v1_phase4_hybrid_retrieval.py  test_v1_phase5_template_registry.py
(+327 files in other folders)
