[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "agent-harness"
version = "0.2.0"
description = "Policy-gated deterministic agent workflow harness for Python refactor scenarios."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "Apache-2.0" }
authors = [{ name = "Agent Harness Contributors" }]
keywords = ["agents", "cli", "policy", "audit", "evals"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: Apache Software License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Software Development :: Quality Assurance",
]
dependencies = [
  "pydantic>=2.7,<3",
]

[project.optional-dependencies]
retrieval = [
  "fastembed>=0.3",
  "qdrant-client>=1.9",
]
dev = [
  "build>=1",
  "mypy>=1.10",
  "pytest>=8",
  "ruff>=0.5",
]
langgraph = [
  "langgraph>=0.2",
]

[project.scripts]
agent-harness = "agent_harness.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
agent_harness = ["bundled_templates/**/*.json", "bundled_templates/**/*.sqlite3", "bundled_benchmarks/**/*.json", "provider_fixtures/**/*.json", "py.typed"]

[tool.uv]
package = true

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.mypy]
python_version = "3.11"
strict = true
packages = ["agent_harness"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
markers = [
  "live_provider: opt-in live provider smoke tests; require AGENT_HARNESS_RUN_LIVE_PROVIDER_TESTS=1 and explicit pytest -m live_provider",
]
