[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "example-cli-tool"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = []

[project.scripts]
example-cli = "example_cli_tool.cli:main"

[tool.pytest.ini_options]
pythonpath = ["src"]
